examples/self-sharding/cafe-ingress-selfshard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress-varnish
  annotations:
    kubernetes.io/ingress.class: "varnish"
    ingress.varnish-cache.org/self-sharding: "on"
    ingress.varnish-cache.org/self-sharding-probe-timeout: "6s"
    ingress.varnish-cache.org/self-sharding-probe-interval: "6s"
    ingress.varnish-cache.org/self-sharding-probe-initial: "2"
    ingress.varnish-cache.org/self-sharding-probe-window: "4"
    ingress.varnish-cache.org/self-sharding-probe-threshold: "3"
    ingress.varnish-cache.org/self-sharding-max-secondary-ttl: "1m"
  namespace: varnish-ingress
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
